--- a/resources/template.html
+++ b/resources/template.html
@@ -46,7 +46,7 @@
             color: #eeeeee;
         }
 
-        .description, .functions, .modifiers, .contracts {
+        .description, .functions, .modifiers, .contracts, .states {
             font-size: 15px;
             margin-top: 25px;
             padding: 13px;
@@ -141,7 +141,13 @@
         <div class="modifiers" id="modifiers">
             <h4>modifiers</h4>
         </div>
-        <!-- /functions -->
+        <!-- /modidiers -->
+
+        <!-- states -->
+        <div class="states" id="states">
+            <h4>states</h4>
+        </div>
+        <!-- /states -->
     </div>
 
     <!--  jsplumb -->
@@ -335,6 +341,24 @@
                         isFirst = false;
                     } else {
                         $('#modifiers_table').append('<tr><td><font color="#C0C0C0">' + contract + '</font></td><td>' + name + '</td></tr>');
+                    }
+                });
+            }
+
+            // states table
+            $('#states').append('<table border="1" id="states_table"><tr><th>contract</th><th>state</th><th>type</th><th>visibility</th><th>isConst</th></tr>');
+            for(var contract in def.states) {
+                var isFirst = true;
+                def.states[contract].forEach(function(state) {
+                    var name = state.name;
+                    var type = state.type;
+                    var visibility = state.visibility;
+                    var isConst = state.isConst;
+                    if(isFirst) {
+                        $('#states_table').append('<tr><td>' + contract + '</td><td>' + name + '</td><td>' + type + '</td><td>' + visibility + '</td><td>' + isConst + '</td></tr>');
+                        isFirst = false;
+                    }  else {
+                        $('#states_table').append('<tr><td><font color="#C0C0C0">' + contract + '</font></td><td>' + name + '</td><td>' + type + '</td><td>' + visibility + '</td><td>' + isConst + '</td></tr>');
                     }
                 });
             }
